--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-# requirements.txt
-
-# Core ML/AI Libraries
-# Installs PyTorch with CUDA 11.8 support. Adjust if you have a different CUDA version or no GPU.
-# For CPU-only: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-torch==2.1.2+cu118 --extra-index-url https://download.pytorch.org/whl/cu118
+# requirements.txt (CPU-only)
 faster-whisper==0.10.1
-openai==1.3.7
-
-# Networking and Async
+numpy==1.26.2
 websockets==12.0
-numpy==1.26.2	
-dotenv
+openai==1.3.7
+python-dotenv==1.0.1
+requests>=2.31.0
