--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # requirements.txt (CPU-only)
+
 faster-whisper==0.10.1
-numpy==1.26.2
+numpy==1.26.4
 websockets==12.0
-openai==1.3.7
+openai==1.53.0
+httpx==0.27.2
 python-dotenv==1.0.1
-requests>=2.31.0
+requests==2.32.3
